Conclusão da persistencia de dados e configuração do admin

--- a/templates/galeria/buscar.html
+++ b/templates/galeria/buscar.html
@@ -45,8 +45,8 @@
                             {% endfor %}
                             {% else %}
                             <div class="imagem__texto">
-                                <p>Obras não encontradas</p>
-                            </div>                                                 
+                                <p>Obras não encontradas!</p>
+                            </div>                                                
                             {% endif %}
                         </ul>
                     </div>                    
