--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -3,11 +3,7 @@
 <div class="pagina-inicial">
     <header class="cabecalho">
         <img src="{% static '/assets/logo/Logo(2).png' %}" alt="Logo da Galeria Mundi" />
-        {% for message in messages %}
-            <div class="alert alert-primary">
-                <p id="messages">{{ message }}</p>
-            </div>
-        {% endfor %}
+        {% include 'partials/_alertas.html' %}
         <div class="cabecalho__busca">
             <div class="busca__fundo">
                 <form action="{% url 'buscar' %}">
