--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -16,6 +16,10 @@
                                 <p class="imagem__descricao">{{ fotografia.legenda }}</p>
                                 <p class="imagem__texto">{{ fotografia.descricao }}</p>
                             </div>
+                            <div>
+                                <a href="{% url 'editar_obra' fotografia.id %}"><button class="btn btn-success col-12" style="padding: top 5px;">Editar</button></a>
+                                <a href="{% url 'deletar_obra' fotografia.id %}"><button class="btn btn-danger col-12" style="padding: top 5px;">Apagar</button></a>
+                            </div>
                         </div>
                     </div>
                 </section>
