--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -11,10 +11,10 @@
                 <section class="tags">
                     <p class="tags__titulo">Busque por tags:</p>
                     <ul class="tags__lista">
-                        <li class="tags__tag">Pintura</li>
-                        <li class="tags__tag">Escultura</li>
-                        <li class="tags__tag">Fotografia</li>
-                        <li class="tags__tag">Desenho</li>
+                        <li class="tags__tag"><a href="{% url 'filtro' 'PINTURA' %}" class="btn" style="color:#C9C9C9">Pintura</a></li>
+                        <li class="tags__tag"><a href="{% url 'filtro' 'ESCULTURA' %}" class="btn" style="color:#C9C9C9">Escultura</a></li>
+                        <li class="tags__tag"><a href="{% url 'filtro' 'FOTOGRAFIA' %}" class="btn" style="color:#C9C9C9">Fotografia</a></li>
+                        <li class="tags__tag"><a href="{% url 'filtro' 'DESENHO' %}" class="btn" style="color:#C9C9C9">Desenho</a></li>
                     </ul>
                 </section>
                 <section class="galeria">                    
