--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -22,5 +22,6 @@
                 <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"> Login</a>
                 <a href="{% url 'cadastro' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Cadastrar</a>
                 <a href="{% url 'logout' %}"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Logout</a>
+                <a href="{% url 'nova_obra' %}"><img src="{% static '/assets/ícones/1x/new.png' %}"> Cadastrar Obra</a>
             </nav>
         </section>
