--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -33,7 +33,8 @@ body {
     line-height: 1;
     font-family: 'Space Grotesk', sans-serif;
     min-height: 100vh;
-    background: linear-gradient(#041833,#04244F,#154580);
+    /*background: linear-gradient(#041833,#04244F,#154580);*/
+    background: linear-gradient(#f8e8d1, #f3d5b5, #e7c6a9, #d5b9b2, #a5a58d);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
