--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -5,16 +5,16 @@
 
             <section class="conteudo">
                 <section class="banner">
-                    <img class="banner__imagem" src="{% static '/assets/imagens/Banner(2).png' %}" alt="banner Galeria Mundi">
+                    <img class="banner__imagem" src="{% static '/assets/imagens/Banner.png' %}" alt="banner Galeria Mundi">
                     <h1 class="banner__titulo"> Sua Janela para o Mundo da Arte</h1>
                 </section>
                 <section class="tags">
                     <p class="tags__titulo">Busque por tags:</p>
                     <ul class="tags__lista">
-                        <li class="tags__tag"><a href="{% url 'filtro' 'PINTURA' %}" class="btn" style="color:#C9C9C9">Pintura</a></li>
-                        <li class="tags__tag"><a href="{% url 'filtro' 'ESCULTURA' %}" class="btn" style="color:#C9C9C9">Escultura</a></li>
-                        <li class="tags__tag"><a href="{% url 'filtro' 'FOTOGRAFIA' %}" class="btn" style="color:#C9C9C9">Fotografia</a></li>
-                        <li class="tags__tag"><a href="{% url 'filtro' 'DESENHO' %}" class="btn" style="color:#C9C9C9">Desenho</a></li>
+                        <li class="tags__tag"><a href="{% url 'filtro' 'PINTURA' %}" class="btn" style="color:#D2691E">Pintura</a></li>
+                        <li class="tags__tag"><a href="{% url 'filtro' 'ESCULTURA' %}" class="btn" style="color:#D2691E">Escultura</a></li>
+                        <li class="tags__tag"><a href="{% url 'filtro' 'FOTOGRAFIA' %}" class="btn" style="color:#D2691E">Fotografia</a></li>
+                        <li class="tags__tag"><a href="{% url 'filtro' 'DESENHO' %}" class="btn" style="color:#D2691E">Desenho</a></li>
                     </ul>
                 </section>
                 <section class="galeria">                    
