--- a/templates/galeria/nova_obra.html
+++ b/templates/galeria/nova_obra.html
@@ -8,7 +8,7 @@
                     <div class="row">
                         {% for field in form.visible_fields %}
                         <div class="col-12 col-lg-12" style="margin-bottom: 10px;">
-                            <label for="{{ field.id_for_label }}" style="color:#D9D9D9; margin-bottom: 5px;">{{field.label}}</label>
+                            <label for="{{ field.id_for_label }}" style="color:#D2691E; margin-bottom: 5px;">{{field.label}}</label>
                             {{ field }}
                         </div>
                         {% endfor %}
