--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -1,4 +1,3 @@
-
 {% extends 'partials/base.html' %}
 {% load static %}
 {% block content %}
@@ -9,13 +8,13 @@
                     <div class="row">
                         {% for field in form.visible_fields %}
                         <div class="col-12 col-lg-12" style="margin-bottom: 10px;">
-                            <label for="{{ field.id_for_label }}" style="color:#D9D9D9; margin-bottom: 5px;">{{field.label}}</label>
+                            <label for="{{ field.id_for_label }}" style="color:#D2691E; margin-bottom: 5px;">{{field.label}}</label>
                             {{ field }}
                         </div>
                         {% endfor %}
                     </div>
                     <div>
-                        <button type="submit" class="btn btn-success col-12" style="padding: top 5px;">Logar</button>
+                        <button type="submit" class="btn btn-success col-12" style="padding: top 5px;">Entrar</button>
                     </div>
                 </form>
             </section>
