Atualização dos ícones

--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -18,10 +18,10 @@
     <main class="principal">
         <section class="menu-lateral">
             <nav class="menu-lateral__navegacao">
-                <a href="{% url 'index' %}"><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}"> Home</a>
-                <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"> Login</a>
-                <a href="{% url 'cadastro' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Cadastrar</a>
-                <a href="{% url 'logout' %}"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Logout</a>
-                <a href="{% url 'nova_obra' %}"><img src="{% static '/assets/ícones/1x/new.png' %}"> Cadastrar Obra</a>
+                <a href="{% url 'index' %}"><img src="{% static '/assets/ícones/1x/Home-ativo.png' %}"> Home</a>
+                <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/login - inativo.png' %}"> Login</a>
+                <a href="{% url 'cadastro' %}"><img src="{% static '/assets/ícones/1x/adicionar-usuario - inativo.png' %}"> Cadastrar</a>
+                <a href="{% url 'nova_obra' %}"><img src="{% static '/assets/ícones/1x/nova-obra - inativo.png' %}"> Cadastrar Obra</a>
+                <a href="{% url 'logout' %}"><img src="{% static '/assets/ícones/1x/logout - inativo.png' %}"> Logout</a>
             </nav>
         </section>
