--- a/setup/static/styles/style.css
+++ b/setup/static/styles/style.css
@@ -114,7 +114,7 @@ table {
     height: 40px;
     padding: 10px;
     width: 500px;
-    color: #8d4925;
+    color: #ffffff;
 }
 .busca__input::placeholder {
     color: #d5b9b2; /* Cor do placeholder */
@@ -148,7 +148,7 @@ table {
 .card {
     border-radius: 10px;
     box-shadow: 0px 10px 10px #00000050;
-    color: #FFFFFF;
+    color: #8d4925;
     margin-bottom: 1.5rem;
     position: relative;
     width: 450px;
@@ -179,12 +179,14 @@ table {
 }
 
 .card__titulo {
+    color: #8d4925;
     font-weight: bold;
     line-height: 1.2rem;
     margin-top: 0.8em;
 }
 
 .card__texto {
+    color: #8d4925;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -236,7 +238,7 @@ table {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    color: #FFFFFF;
+    color: #8d4925;;
     margin-top: 0.5rem;
 }
 
@@ -544,4 +546,14 @@ table {
     appearance: none;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
+}
+.artist {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+}
+.artist img {
+    margin-right: 10px;
 }
