--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -2,57 +2,85 @@
 {% load static %}
 {% block content %}
 
+<section class="conteudo">
+    <section class="banner">
+        <img class="banner__imagem" src="{% static '/assets/imagens/Banner.png' %}" alt="banner Galeria Mundi">
+        <h1 class="banner__titulo"> Sua Janela para o Mundo da Arte</h1>
+    </section>
+    <section class="tags">
+        <p class="tags__titulo">Busque por tags:</p>
+        <ul class="tags__lista">
+            <li class="tags__tag"><a href="{% url 'filtro' 'PINTURA' %}" class="btn" style="color:#D2691E">Pintura</a></li>
+            <li class="tags__tag"><a href="{% url 'filtro' 'ESCULTURA' %}" class="btn" style="color:#D2691E">Escultura</a></li>
+            <li class="tags__tag"><a href="{% url 'filtro' 'FOTOGRAFIA' %}" class="btn" style="color:#D2691E">Fotografia</a></li>
+            <li class="tags__tag"><a href="{% url 'filtro' 'DESENHO' %}" class="btn" style="color:#D2691E">Desenho</a></li>
+        </ul>
+    </section>
+    <section class="galeria">                    
+        <div class="cards">
+            <h2 class="cards__titulo">Navegue pela galeria</h2>
+            <ul class="cards__lista">
+                {% if cards %}
+                {% for fotografia in cards %}
+                <li class="card">
+                    <a href="{% url 'imagem' fotografia.id %}">
+                        {% if fotografia.foto == "" or fotografia.foto == null %}
+                            <img class="card__imagem" src="{% static '/assets/imagens/galeria/not-found.png' %}" alt="foto">
+                        {% else %}
+                            <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
+                        {% endif %}
+                    </a>
+                    <span class="card__tag">Fotografia</span>
+                    <div class="card__info">
+                        <p class="card__titulo">{{ fotografia.nome }}</p>
+                        <div class="card__texto">
+                            <p class="card__descricao"> {{ fotografia.legenda }} </p>
+                            <span>
+                                <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
+                            </span>
+                        </div>
+                    </div>
+                </li>
+                {% endfor %}
+                {% else %}
+                <div class="imagem__texto">
+                    <p>Obras não encontradas</p>
+                </div>                                                 
+                {% endif %}
+            </ul>
+        </div>                    
+    </section>
+    <p>   </p>
+    <section class="galeria"> <!-- Alterado de "artists" para "galeria" -->
+        <div class="cards">
+            <h2 class="cards__titulo">Artistas encontrados no Artsy</h2>
+            <ul class="cards__lista"> <!-- Alterado de "div" para "ul" -->
+                {% if artists %}
+                {% for artist in artists %}
+                <li class="card"> <!-- Alterado de "div" para "li" -->
+                    <a href="{{ artist.permalink }}">
+                        <img class="card__imagem" src="{{ artist.thumbnail }}" alt="{{ artist.title }}">
+                    </a>
+                    <span class="card__tag">Artista</span> <!-- Adicionado para consistência -->
+                    <div class="card__info">
+                        <p class="card__titulo">{{ artist.title }}</p>
+                        <div class="card__texto">
+                            <p class="card__descricao">Descrição do artista</p> <!-- Adicionado para consistência -->
+                            <span>
+                                <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
+                            </span>
+                        </div>
+                    </div>
+                </li>
+                {% endfor %}
+                {% else %}
+                <div class="imagem__texto">
+                    <p>Artistas não encontrados</p>
+                </div>                                                 
+                {% endif %}
+            </ul>
+        </div>                    
+    </section>
+</section>
 
-            <section class="conteudo">
-                <section class="banner">
-                    <img class="banner__imagem" src="{% static '/assets/imagens/Banner.png' %}" alt="banner Galeria Mundi">
-                    <h1 class="banner__titulo"> Sua Janela para o Mundo da Arte</h1>
-                </section>
-                <section class="tags">
-                    <p class="tags__titulo">Busque por tags:</p>
-                    <ul class="tags__lista">
-                        <li class="tags__tag"><a href="{% url 'filtro' 'PINTURA' %}" class="btn" style="color:#D2691E">Pintura</a></li>
-                        <li class="tags__tag"><a href="{% url 'filtro' 'ESCULTURA' %}" class="btn" style="color:#D2691E">Escultura</a></li>
-                        <li class="tags__tag"><a href="{% url 'filtro' 'FOTOGRAFIA' %}" class="btn" style="color:#D2691E">Fotografia</a></li>
-                        <li class="tags__tag"><a href="{% url 'filtro' 'DESENHO' %}" class="btn" style="color:#D2691E">Desenho</a></li>
-                    </ul>
-                </section>
-                <section class="galeria">                    
-                    <div class="cards">
-                        <h2 class="cards__titulo">Navegue pela galeria</h2>
-                        <ul class="cards__lista">
-                            {% if cards %}
-                            {% for fotografia in cards %}
-                            <li class="card">
-                                <a href="{% url 'imagem' fotografia.id %}">
-                                    {% if fotografia.foto == "" or fotografia.foto == null %}
-                                        <img class="card__imagem" src="{% static '/assets/imagens/galeria/not-found.png' %}" alt="foto">
-                                    {% else %}
-                                        <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
-                                    {% endif %}
-                                </a>
-                                <span class="card__tag">Fotografia</span>
-                                <div class="card__info">
-                                    <p class="card__titulo">{{ fotografia.nome }}</p>
-                                    <div class="card__texto">
-                                        <p class="card__descricao"> {{ fotografia.legenda }} </p>
-                                        <span>
-                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            {% endfor %}
-                            {% else %}
-                            <div class="imagem__texto">
-                                <p>Obras não encontradas</p>
-                            </div>                                                 
-                            {% endif %}
-                        </ul>
-                    </div>                    
-                </section>
-            </section>
-        </main>
-    </div>
-    
 {% endblock %}
