--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -7,9 +7,9 @@
         <div class="cabecalho__busca">
             <div class="busca__fundo">
                 <form action="{% url 'buscar' %}">
-                    <input class="busca__input" type="text" name = "buscar" placeholder="O que você procura?">
+                    <input class="busca__input" type="text" name="buscar" placeholder="O que você procura?">
                     <button type="submit">
-                        <img class="busca__icone" src="{% static '/assets/ícones/1x/search.png' %}" alt="ícone de search">
+                        <img class="busca__icone" src="{% static '/assets/ícones/1x/Busca.png' %}" alt="ícone de busca">
                     </button>                    
                 </form>
             </div>
@@ -18,10 +18,10 @@
     <main class="principal">
         <section class="menu-lateral">
             <nav class="menu-lateral__navegacao">
-                <a href="{% url 'index' %}"><img src="{% static '/assets/ícones/1x/Home-ativo.png' %}"> Home</a>
-                <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/login - inativo.png' %}"> Login</a>
-                <a href="{% url 'cadastro' %}"><img src="{% static '/assets/ícones/1x/adicionar-usuario - inativo.png' %}"> Cadastrar</a>
-                <a href="{% url 'nova_obra' %}"><img src="{% static '/assets/ícones/1x/nova-obra - inativo.png' %}"> Cadastrar Obra</a>
-                <a href="{% url 'logout' %}"><img src="{% static '/assets/ícones/1x/logout - inativo.png' %}"> Logout</a>
+                <a href="{% url 'index' %}"><img class="icone" src="{% static '/assets/ícones/1x/Home.png' %}"> Home</a>
+                <a href="{% url 'login' %}"><img class="icone" src="{% static '/assets/ícones/1x/Login.png' %}"> Login</a>
+                <a href="{% url 'cadastro' %}"><img class="icone" src="{% static '/assets/ícones/1x/NovoUsuario.png' %}"> Cadastrar Artista</a>
+                <a href="{% url 'nova_obra' %}"><img class="icone" src="{% static '/assets/ícones/1x/NovaObra.png' %}"> Cadastrar Obra</a>
+                <a href="{% url 'logout' %}"><img class="icone" src="{% static '/assets/ícones/1x/Logout.png' %}"> Logout</a>
             </nav>
         </section>
