--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -2,7 +2,7 @@
 
 <div class="pagina-inicial">
     <header class="cabecalho">
-        <img src="{% static '/assets/logo/Logo.png' %}" alt="Logo da Galeria Mundi" />
+        <img class="cabecalho__logo" src="{% static '/assets/logo/logo.svg' %}" alt="Logo da Galeria Mundi" />
         {% include 'partials/_alertas.html' %}
         <div class="cabecalho__busca">
             <div class="busca__fundo">
