Finalização da implementação da API

--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -65,7 +65,7 @@
                     <div class="card__info">
                         <p class="card__titulo">{{ artist.title }}</p>
                         <div class="card__texto">
-                            <p class="card__descricao">{{ artist.biography }}</p>
+                            <p class="card__descricao">{{ artist.type }}</p>
                             <span>
                                 <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                             </span>
